--- a/app/blocks/overlay/overlay.scss
+++ b/app/blocks/overlay/overlay.scss
@@ -3,7 +3,7 @@
 
   position: fixed;
   display: block;
-  z-index: 20;
+  z-index: 10;
   top: 0;
   left: 0;
   right: 0;
@@ -12,7 +12,7 @@
   pointer-events: none;
   transition: opacity $ease-main;
 
-  .is-navigation-open &, .is-overlay-show & {
+  .is-overlay-show & {
     opacity: 1;
     pointer-events: auto;
   }
@@ -25,6 +25,6 @@
     width: 100%;
     height: calc(100% + 140px);
     transform: translate3d(-50%, -50%, 0);
-    background-color: rgba($color-overlay, .1);
+    background-color: rgba($color-overlay, .2);
   }
 }
