--- a/app/blocks/selection/selection.scss
+++ b/app/blocks/selection/selection.scss
@@ -231,13 +231,12 @@
     z-index: 3;
     display: flex;
     overflow: hidden;
+    flex-direction: column;
 
     @include rule(margin-top, (xl: 10px, xlg: 10, lg: 10, md: 10, sm: 0));
     @include rule(width, (xl: 478px, xlg: 478, lg: 478, md: 478));
     @include rule(max-height, (xl: 400px, xlg: 400, lg: 400, md: 400));
     @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 0));
-    @include rule(padding-top, (sm: 60));
-    @include rule(padding-bottom, (sm: 60));
 
     @include screen('xlg', max, 2) {
       box-shadow: 0 pxtovw(3, 1660) pxtovw(14, 1660) rgba(0, 0, 0, .13), 0 0 pxtovw(4, 1660) rgba(56, 58, 68, .09);
@@ -253,14 +252,26 @@
 
     @include screen('sm', max, 2) {
       position: fixed;
-      top: 0;
+      top: auto;
       left: 0;
+      bottom: 0;
       width: 100%;
-      height: 100%;
+      max-height: 100%;
       box-shadow: none;
       z-index: 25;
-      transform: translate3d(100%, 0, 0);
-      max-height: none;
+      transform: translate3d(0, 100%, 0);
+      overflow: visible;
+
+      &::before {
+        @include pseudo;
+
+        bottom: 100%;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: rgba($color-overlay, .2);
+        z-index: 24;
+      }
     }
 
     #{$b}.is-open & {
@@ -287,30 +298,22 @@
     overscroll-behavior: none;
 
     @include native-scroll;
-    @include rule(padding-top, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 42));
-    @include rule(padding-bottom, (xl: 67px, xlg: 67, lg: 67, md: 67, sm: 48));
-    @include rule(padding-left, (xl: 36px, xlg: 36, lg: 36, md: 36, sm: 20));
-    @include rule(padding-right, (xl: 36px, xlg: 36, lg: 36, md: 36, sm: 20));
-
-    @include screen('sm', max, 2) {
-      display: grid;
-      grid-template-columns: 100%;
-      grid-template-rows: auto 1fr;
-      row-gap: pxtovw(25, 375);
-    }
+    @include rule(padding-top, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 19));
+    @include rule(padding-bottom, (xl: 67px, xlg: 67, lg: 67, md: 67, sm: 29));
+    @include rule(padding-left, (xl: 36px, xlg: 36, lg: 36, md: 36, sm: 25));
+    @include rule(padding-right, (xl: 36px, xlg: 36, lg: 36, md: 36, sm: 25));
 
     #{$b}__head_location ~ #{$b}__drop & {
-      @include rule(padding-bottom, (xl: 28px, xlg: 28, lg: 28, md: 28, sm: 38));
-      @include rule(padding-left, (xl: 33px, xlg: 33, lg: 33, md: 33, sm: 20));
-      @include rule(padding-right, (xl: 33px, xlg: 33, lg: 33, md: 33, sm: 20));
-      @include rule(padding-top, (xl: 32px, xlg: 32, lg: 32, md: 32, sm: 42));
+      @include rule(padding-bottom, (xl: 28px, xlg: 28, lg: 28, md: 28, sm: 29));
+      @include rule(padding-left, (xl: 33px, xlg: 33, lg: 33, md: 33, sm: 25));
+      @include rule(padding-right, (xl: 33px, xlg: 33, lg: 33, md: 33, sm: 25));
+      @include rule(padding-top, (xl: 32px, xlg: 32, lg: 32, md: 32, sm: 19));
     }
   }
 
   &__describe {
     @include screen('sm', max, 2) {
-      grid-column: 1 / 2;
-      grid-row: 1 / 2;
+      display: none;
     }
   }
 
@@ -385,36 +388,30 @@
   }
 
   &__header {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     display: none;
     background-color: $nd-color-basic-light;
     color: $nd-color-basic;
     box-sizing: border-box;
-    z-index: 2;
-    border-bottom: 1px solid $nd-color-border5;
 
     @include screen('sm', max, 2) {
       display: flex;
+      flex-direction: row-reverse;
       justify-content: space-between;
-      align-items: center;
-      height: pxtovw(60, 375);
-      padding: 0 pxtovw(20, 375);
+      padding: pxtovw(14, 375) pxtovw(20, 375);
     }
   }
 
   &__close {
-    @include rule(width, (sm: 40));
-    @include rule(height, (sm: 40));
-    @include rule(background-size, (sm: 18));
+    @include rule(width, (sm: 32));
+    @include rule(height, (sm: 32));
+    @include rule(background-size, (sm: 14));
 
     font-size: 0;
     cursor: pointer;
     background-repeat: no-repeat;
-    background-position: 0 50%;
-    background-image: url('../images/bg/bg-cross.svg');
+    background-position: 50% 50%;
+    background-image: url('../images/bg/bg-bold-cross.svg');
   }
 
   &__title {
@@ -422,8 +419,10 @@
     text-align: center;
     font-family: $font-stolzl;
     line-height: (20 / 17);
+    align-self: flex-end;
 
     @include rule(font-size, (sm: 17));
+    @include rule(margin-top, (sm: 16));
   }
 
   &__clear {
@@ -449,9 +448,6 @@
   }
 
   &__footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
     width: 100%;
     display: none;
     background-color: $nd-color-basic-light;
@@ -460,11 +456,9 @@
 
     @include screen('sm', max, 2) {
       display: flex;
-      height: pxtovw(60, 375);
       align-items: center;
       justify-content: center;
-      padding: 0 pxtovw(20, 375);
-      box-shadow: 0 pxtovw(-2, 375) pxtovw(2, 375) rgba(0, 0, 0, .06);
+      padding: pxtovw(16, 375) pxtovw(20, 375);
     }
   }
 
@@ -522,8 +516,9 @@
     }
 
     @include screen('sm', max, 2) {
-      margin: pxtovw(-13, 375) pxtovw(-10, 375) 0;
-      width: calc(100% + ((2000 / 375) * 1vw));
+      display: block;
+      width: 100%;
+      margin: 0;
     }
 
     .loader {
@@ -552,21 +547,29 @@
     }
 
     @include screen('sm', max, 2) {
-      margin: pxtovw(13, 375) pxtovw(10, 375) 0;
+      margin: 0;
+      flex: none;
+      width: 100%;
     }
 
     &_wide {
       min-width: 90%;
     }
 
+    &:not(:first-child) {
+      @include screen('sm', max, 2) {
+        margin-top: -1px;
+      }
+    }
+
     .check-button {
       &__content {
-        @include rule(font-size, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 15));
+        @include rule(font-size, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 17));
 
         line-height: (18 / 13);
 
         @include screen('sm', max, 2) {
-          line-height: (18 / 15);
+          line-height: (22 / 18);
         }
       }
     }
