--- a/app/blocks/selection/selection.scss
+++ b/app/blocks/selection/selection.scss
@@ -260,7 +260,9 @@
       box-shadow: none;
       z-index: 25;
       transform: translate3d(0, 100%, 0);
+      opacity: 1;
       overflow: visible;
+      visibility: visible;
 
       &::before {
         @include pseudo;
@@ -270,7 +272,9 @@
         width: 100%;
         height: 100vh;
         background-color: rgba($color-overlay, .2);
-        z-index: 24;
+        z-index: 0;
+        opacity: 0;
+        transition: opacity $ease-main;
       }
     }
 
@@ -279,6 +283,12 @@
       opacity: 1;
       pointer-events: auto;
       transform: translate3d(0, 0, 0);
+
+      @include screen('sm', max, 2) {
+        &::before {
+          opacity: 1;
+        }
+      }
     }
 
     #{$b}__head_location ~ & {
