--- a/app/blocks/map/map.scss
+++ b/app/blocks/map/map.scss
@@ -122,3 +122,10 @@
     }
   }
 }
+
+.map-marker-label-circle {
+  border-radius: 50%;
+  background-color: #fff;
+  width: 15px;
+  height: 15px;
+}
