--- a/app/components/user-menu-panel/nd-user-menu-panel.pug
+++ b/app/components/user-menu-panel/nd-user-menu-panel.pug
@@ -43,8 +43,8 @@ mixin nd-user-menu-panel(host, noUser, isSearch)
                   path(d="M8.03276 1.47636C9.50428 1.47636 10.9383 1.9654 12.0818 2.84198L13.0097 3.55248L13.9376 2.84198C15.0811 1.95617 16.5151 1.47636 17.9866 1.47636C19.7393 1.47636 21.3796 2.14072 22.6074 3.34948C25.1568 5.85928 25.1568 9.95617 22.6074 12.466L13.0003 21.9146L3.412 12.466C2.1748 11.2572 1.49996 9.63322 1.49996 7.90773C1.49996 6.18224 2.1748 4.55825 3.412 3.34948C4.63983 2.14072 6.28006 1.47636 8.03276 1.47636ZM17.9772 0C16.2152 0 14.4531 0.56286 13.0097 1.67935C11.5475 0.56286 9.79484 0 8.03276 0C5.97076 0 3.90875 0.765859 2.35288 2.30681C-0.777619 5.3887 -0.777619 10.4268 2.35288 13.5087L13.0097 24L23.6665 13.5087C26.797 10.4268 26.797 5.3887 23.6665 2.30681C22.0919 0.765859 20.0299 0 17.9772 0Z" fill="black")
                   path(d="M13.9185 17.9469C13.7217 17.9469 13.5343 17.8731 13.3843 17.7347C13.0937 17.4487 13.0937 16.9781 13.3843 16.692L19.6453 10.5282C19.9358 10.2422 20.4139 10.2422 20.7044 10.5282C20.995 10.8143 20.995 11.2849 20.7044 11.5709L14.4434 17.7347C14.3028 17.8731 14.1154 17.9469 13.9185 17.9469Z" fill="#0085FF")
       else if isSearch
-        +e.LI.item
-          +e.A.link(href="#")
+        +e.LI.item_filter
+          +e.A.link.js-show-modal(href="#" data-modal-target="filter-range")
             +nd-user-link('', '', '', 'div')
               +e.SVG.icon_filter(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.8 21.1")
                 path(d="M21.25,4.2H7.35a.65.65,0,0,1,0-1.3h13.9a.65.65,0,1,1,0,1.3Z")
@@ -55,7 +55,7 @@ mixin nd-user-menu-panel(host, noUser, isSearch)
                 path(d="M20.25,14.3a3.55,3.55,0,0,1-3.55-3.55A3.69,3.69,0,0,1,17.84,8.1a3.3,3.3,0,0,1,2.45-.9h0a3.55,3.55,0,0,1,0,7.1Zm-.13-5.8a2,2,0,0,0-1.39.55,2.37,2.37,0,0,0-.73,1.7A2.25,2.25,0,1,0,20.25,8.5Z" fill="#0085ff")
             +e.text Filter
         +e.LI.item
-          +e.A.link(href="#")
+          +e.A.link.js-show-modal(href="#" data-modal-target="filter-sort")
             +nd-user-link('', '', '', 'div')
               +e.SVG.icon_sort(viewBox="0 0 22.3 17.78" fill="none" xmlns="http://www.w3.org/2000/svg")
                 path(d="M4.85,16.38a.66.66,0,0,1-.65-.66V.72a.65.65,0,1,1,1.3,0v15A.66.66,0,0,1,4.85,16.38Z")
