--- a/app/layouts/redesign-default.pug
+++ b/app/layouts/redesign-default.pug
@@ -74,4 +74,6 @@ html(lang='en')
     if map
       //- script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyCKtbucQSqDWV-9lNCgzESqbdUakhraXDY&callback=initMap')
       script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAlLpVITMmaCmvob8dU3xWWBDOjPefUkZ4&callback=initMap')
+      // Библиотека для кластеризации в картах
+      script(src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js")
       script(src='assets/scripts/map.js')
