--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -256,11 +256,13 @@ $icon-input-calendar: url('../images/bg/bg-calendar.svg');
 $icon-select-arrow: url('../images/bg/bg-arrow-select.svg');
 $icon-cross: url('../images/bg/bg-cross.svg');
 $icon-bold-cross: url('../images/bg/bg-bold-cross.svg');
+$icon-bold-cross-blue: url('../images/bg/bg-bold-cross-blue.svg');
 $icon-check-white: url('../images/bg/bg-check-bold-white.svg');
 $icon-check-black: url('../images/bg/bg-check-bold-black.svg');
 $icon-arrow-back: url('../images/bg/bg-arrow-back.svg');
 $icon-arrow-next: url('../images/bg/bg-arrow-next.svg');
 $icon-map: url('../images/bg/bg-map.svg');
+$icon-map-blue: url('../images/bg/bg-map-blue.svg');
 $icon-angle-arrow-back: url('../images/bg/bg-angle-back.svg');
 $icon-angle-arrow-next: url('../images/bg/bg-angle-next.svg');
 $icon-angle-small-next: url('../images/bg/bg-angle-small-next.svg');
