--- a/app/components/layout/layout.scss
+++ b/app/components/layout/layout.scss
@@ -53,6 +53,14 @@
       @include screen('sm') {
         grid-row: 1 / 2;
       }
+
+      .map-in-fullview & {
+        z-index: 4;
+
+        @include screen('md', max, 2) {
+          grid-row: 1 / 2;
+        }
+      }
     }
 
     &_results {
@@ -88,6 +96,7 @@
       grid-row: 2 / 3;
       height: 100%;
       overflow: hidden;
+      transition: width $ease-main, height $ease-main;
 
       @include screen('md') {
         grid-column: 1 / 3;
@@ -99,6 +108,20 @@
       }
 
       @include rule(height, (md: 254, sm: 208));
+
+      .map-in-fullview & {
+        z-index: 3;
+        grid-column: 1 / 3;
+
+        @include screen('md', max, 2) {
+          height: calc(100vh - (10600 / 960) * 1vw);
+          grid-row: 2 / 3;
+        }
+
+        @include screen('sm', max, 2) {
+          height: calc(100vh - (6000 / 960) * 1vw);
+        }
+      }
     }
 
     &_start {
